--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -42,13 +42,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start\n",
+      "s\n",
+      "sentence\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code here"
+    "#Code here\n",
+    "new_st = st.split()\n",
+    "\n",
+    "for word in new_st:\n",
+    "    if word [0] == 's':\n",
+    "        print(word)\n"
    ]
   },
   {
@@ -61,13 +76,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code Here"
+    "#Code Here\n",
+    "evenNum = list(range(0,11,2))\n",
+    "print(evenNum)"
    ]
   },
   {
@@ -80,14 +105,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code in this cell\n",
-    "[]"
+    "three_list = [x for x in range(1,51) if x %3 == 0 ]\n",
+    "three_list"
    ]
   },
   {
@@ -100,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -111,13 +148,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "word\n",
+      "\n",
+      "2\n",
+      "in\n",
+      "\n",
+      "4\n",
+      "this\n",
+      "\n",
+      "8\n",
+      "sentence\n",
+      "\n",
+      "4\n",
+      "that\n",
+      "\n",
+      "2\n",
+      "an\n",
+      "\n",
+      "4\n",
+      "even\n",
+      "\n",
+      "6\n",
+      "number\n",
+      "\n",
+      "2\n",
+      "of\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "word_len = int()\n",
+    "new_st = st.split()\n",
+    "\n",
+    "for word in new_st:\n",
+    "    if len(word) % 2 == 0:\n",
+    "        print(len(word))\n",
+    "        print(f\"{word}\\n\")\n",
+    "    else:\n",
+    "        pass\n",
+    "    "
    ]
   },
   {
@@ -130,13 +211,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "The number 3 is a multiple of 3 - 'Fizz'\n",
+      "4\n",
+      "The number 5 is a multiple of 5 - 'Buzz'\n",
+      "The number 6 is a multiple of 3 - 'Fizz'\n",
+      "7\n",
+      "8\n",
+      "The number 9 is a multiple of 3 - 'Fizz'\n",
+      "The number 10 is a multiple of 5 - 'Buzz'\n",
+      "11\n",
+      "The number 12 is a multiple of 3 - 'Fizz'\n",
+      "13\n",
+      "14\n",
+      "The number 15 is a multiple of 3 & 5 - 'FizzBuzz'\n",
+      "16\n",
+      "17\n",
+      "The number 18 is a multiple of 3 - 'Fizz'\n",
+      "19\n",
+      "The number 20 is a multiple of 5 - 'Buzz'\n",
+      "The number 21 is a multiple of 3 - 'Fizz'\n",
+      "22\n",
+      "23\n",
+      "The number 24 is a multiple of 3 - 'Fizz'\n",
+      "The number 25 is a multiple of 5 - 'Buzz'\n",
+      "26\n",
+      "The number 27 is a multiple of 3 - 'Fizz'\n",
+      "28\n",
+      "29\n",
+      "The number 30 is a multiple of 3 & 5 - 'FizzBuzz'\n",
+      "31\n",
+      "32\n",
+      "The number 33 is a multiple of 3 - 'Fizz'\n",
+      "34\n",
+      "The number 35 is a multiple of 5 - 'Buzz'\n",
+      "The number 36 is a multiple of 3 - 'Fizz'\n",
+      "37\n",
+      "38\n",
+      "The number 39 is a multiple of 3 - 'Fizz'\n",
+      "The number 40 is a multiple of 5 - 'Buzz'\n",
+      "41\n",
+      "The number 42 is a multiple of 3 - 'Fizz'\n",
+      "43\n",
+      "44\n",
+      "The number 45 is a multiple of 3 & 5 - 'FizzBuzz'\n",
+      "46\n",
+      "47\n",
+      "The number 48 is a multiple of 3 - 'Fizz'\n",
+      "49\n",
+      "The number 50 is a multiple of 5 - 'Buzz'\n",
+      "The number 51 is a multiple of 3 - 'Fizz'\n",
+      "52\n",
+      "53\n",
+      "The number 54 is a multiple of 3 - 'Fizz'\n",
+      "The number 55 is a multiple of 5 - 'Buzz'\n",
+      "56\n",
+      "The number 57 is a multiple of 3 - 'Fizz'\n",
+      "58\n",
+      "59\n",
+      "The number 60 is a multiple of 3 & 5 - 'FizzBuzz'\n",
+      "61\n",
+      "62\n",
+      "The number 63 is a multiple of 3 - 'Fizz'\n",
+      "64\n",
+      "The number 65 is a multiple of 5 - 'Buzz'\n",
+      "The number 66 is a multiple of 3 - 'Fizz'\n",
+      "67\n",
+      "68\n",
+      "The number 69 is a multiple of 3 - 'Fizz'\n",
+      "The number 70 is a multiple of 5 - 'Buzz'\n",
+      "71\n",
+      "The number 72 is a multiple of 3 - 'Fizz'\n",
+      "73\n",
+      "74\n",
+      "The number 75 is a multiple of 3 & 5 - 'FizzBuzz'\n",
+      "76\n",
+      "77\n",
+      "The number 78 is a multiple of 3 - 'Fizz'\n",
+      "79\n",
+      "The number 80 is a multiple of 5 - 'Buzz'\n",
+      "The number 81 is a multiple of 3 - 'Fizz'\n",
+      "82\n",
+      "83\n",
+      "The number 84 is a multiple of 3 - 'Fizz'\n",
+      "The number 85 is a multiple of 5 - 'Buzz'\n",
+      "86\n",
+      "The number 87 is a multiple of 3 - 'Fizz'\n",
+      "88\n",
+      "89\n",
+      "The number 90 is a multiple of 3 & 5 - 'FizzBuzz'\n",
+      "91\n",
+      "92\n",
+      "The number 93 is a multiple of 3 - 'Fizz'\n",
+      "94\n",
+      "The number 95 is a multiple of 5 - 'Buzz'\n",
+      "The number 96 is a multiple of 3 - 'Fizz'\n",
+      "97\n",
+      "98\n",
+      "The number 99 is a multiple of 3 - 'Fizz'\n",
+      "The number 100 is a multiple of 5 - 'Buzz'\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "mylist = list(range(1,101))\n",
+    "\n",
+    "for num in mylist:\n",
+    "    if num % 3 == 0 and num % 5 != 0:\n",
+    "        print(f\"The number {num} is a multiple of 3 - 'Fizz'\")\n",
+    "    elif num % 5 == 0 and num % 3 != 0:\n",
+    "        print(f\"The number {num} is a multiple of 5 - 'Buzz'\")\n",
+    "    elif num % 3 == 0 and num % 5 == 0:\n",
+    "        print(f\"The number {num} is a multiple of 3 & 5 - 'FizzBuzz'\")\n",
+    "    else:\n",
+    "        print(num)"
    ]
   },
   {
@@ -149,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -160,13 +359,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C', 'a', 'l', 'o', 't', 'f', 'l', 'o', 'e', 'w', 'i', 't', 's']"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "st_split = st.split()\n",
+    "new_st = [x[0] for x in st_split]\n",
+    "new_st"
    ]
   },
   {
@@ -193,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
