--- a/sample.ipynb
+++ b/sample.ipynb
@@ -166,10 +166,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n_int = 7\n",
+    "n_float = 10.25\n",
+    "n_str = \"Mattan\"\n",
+    "n_dict = {'k1': 7, \"k2\": \"Hellow\"}\n",
+    "n_list = [1,2,3]\n",
+    "n_tup = (1,2)\n",
+    "n_set = [1,2,2,3,3,3,{'k1':7},{'k1':7}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = [n_int, n_float, n_str, n_dict, n_list, n_tup, n_set]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'str'>\n",
+      "<class 'dict'>\n",
+      "<class 'list'>\n",
+      "<class 'tuple'>\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value in output:\n",
+    "    print(type(value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myfunc(*args):\n",
+    "    #Placeholders\n",
+    "    list = []\n",
+    "\n",
+    "    #Iterating through args to see if even\n",
+    "    for x in args:\n",
+    "        if x % 2 == 0:\n",
+    "           list.append(x)\n",
+    "        else:\n",
+    "            pass\n",
+    "    return list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfunc(1,2,3,4,5,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word = 'Mattan'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mattan(**kwargs):\n",
+    "    if 'first' in kwargs and 'last' in kwargs and 'age' in kwargs:\n",
+    "        print('All details found')\n",
+    "        return kwargs['first'] + \" \" + kwargs['last'] + \" age: \" + str(kwargs['age'])\n",
+    "    else:\n",
+    "\n",
+    "        pass"
+   ]
   }
  ],
  "metadata": {
