--- a/13-Web-Scraping/00-Guide-to-Web-Scraping.ipynb
+++ b/13-Web-Scraping/00-Guide-to-Web-Scraping.ipynb
@@ -1653,7 +1653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Okay, let's give it a shot by combining all the ideas we've talked about! (this should take about 20-60 seconds to complete running. Be aware a firwall may prevent this script from running. Also if you are getting a no response error, maybe try adding a sleep step with time.sleep(1)."
+    "Okay, let's give it a shot by combining all the ideas we've talked about! (this should take about 20-60 seconds to complete running. Be aware a firewall may prevent this script from running. Also if you are getting a no response error, maybe try adding a sleep step with time.sleep(1)."
    ]
   },
   {
