--- a/Codewars.ipynb
+++ b/Codewars.ipynb
@@ -991,12 +991,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sum_array(arr):\n",
-    "    \n",
+    "    if arr == None:\n",
+    "        return 0\n",
+    "\n",
     "    lst = list(arr)\n",
     "    noneType = arr.count(None)\n",
     "    \n",
@@ -1011,6 +1013,46 @@
     "        \n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_array(None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_array([])"
    ]
   },
   {
