--- a/Portfolio/02 - Python Statements/dict.ipynb
+++ b/Portfolio/02 - Python Statements/dict.ipynb
@@ -1304,6 +1304,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def test():"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
