--- a/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -671,23 +671,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def blackjack(a,b,c):\n",
-    "    pass"
+    "    \n",
+    "    if (a + b + c) <= 21:\n",
+    "        return (a + b + c)\n",
+    "    elif (a + b + c) > 21 and (a == 11 or b == 1 or c == 11):\n",
+    "        return (a + b + c) - 10\n",
+    "    else:\n",
+    "        return 'BUST'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(5,6,7)"
@@ -695,11 +712,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BUST'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(9,9,9)"
@@ -707,11 +735,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(9,9,11)"
@@ -730,23 +769,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def summer_69(arr):\n",
-    "    pass"
+    "    six_pos = arr.index(6)\n",
+    "    nine_pos = arr.index(9)\n",
+    "\n",
+    "    return sum(arr[0:six_pos])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "6 is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [55]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Check\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m summer_69([\u001b[39m1\u001b[39;49m, \u001b[39m3\u001b[39;49m, \u001b[39m5\u001b[39;49m])\n",
+      "Input \u001b[1;32mIn [54]\u001b[0m, in \u001b[0;36msummer_69\u001b[1;34m(arr)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msummer_69\u001b[39m(arr):\n\u001b[1;32m----> 2\u001b[0m     six_pos \u001b[39m=\u001b[39m arr\u001b[39m.\u001b[39;49mindex(\u001b[39m6\u001b[39;49m)\n\u001b[0;32m      3\u001b[0m     nine_pos \u001b[39m=\u001b[39m arr\u001b[39m.\u001b[39mindex(\u001b[39m9\u001b[39m)\n\u001b[0;32m      5\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39msum\u001b[39m(arr[\u001b[39m0\u001b[39m:six_pos])\n",
+      "\u001b[1;31mValueError\u001b[0m: 6 is not in list"
+     ]
+    }
+   ],
    "source": [
     "# Check\n",
     "summer_69([1, 3, 5])"
