--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -25,19 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def vol(rad):\n",
-    "    pass"
+    "    \n",
+    "    return (4 / 3) * 3.14 * rad ** 3 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +47,7 @@
        "33.49333333333333"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,27 +67,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def ran_check(num,low,high):\n",
-    "    pass"
+    "    \n",
+    "    if num in range(low,high):\n",
+    "\n",
+    "        return f\"{num} is in the range between {low} and {high}\"\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        return \"Not in range\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 is in the range between 2 and 7\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'5 is in the range between 2 and 7'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -103,19 +114,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def ran_bool(num,low,high):\n",
-    "    pass"
+    "   if num in range(low,high):\n",
+    "    \n",
+    "        return True\n",
+    "    \n",
+    "   else:\n",
+    "        \n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +141,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,28 +169,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def up_low(s):\n",
-    "    pass"
+    "\n",
+    "    scoreboard = {'upper': 0, 'lower': 0}\n",
+    "\n",
+    "    for char in s:\n",
+    "        if char != ' ':\n",
+    "                   \n",
+    "            if char.isupper():\n",
+    "                scoreboard['upper'] += 1\n",
+    "                print(f\"Upper increased by 1 for letter {char}\")\n",
+    "\n",
+    "            elif char.islower():\n",
+    "                scoreboard['lower'] += 1\n",
+    "                print(f\"lower increased by 1 for letter {char}\")\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\n",
-      "No. of Upper case characters :  4\n",
-      "No. of Lower case Characters :  33\n"
+      "Upper increased by 1 for letter H\n",
+      "lower increased by 1 for letter e\n",
+      "lower increased by 1 for letter l\n",
+      "lower increased by 1 for letter l\n",
+      "lower increased by 1 for letter o\n",
+      "Upper increased by 1 for letter M\n",
+      "lower increased by 1 for letter r\n",
+      "Upper increased by 1 for letter R\n",
+      "lower increased by 1 for letter o\n",
+      "lower increased by 1 for letter g\n",
+      "lower increased by 1 for letter e\n",
+      "lower increased by 1 for letter r\n",
+      "lower increased by 1 for letter s\n",
+      "lower increased by 1 for letter h\n",
+      "lower increased by 1 for letter o\n",
+      "lower increased by 1 for letter w\n",
+      "lower increased by 1 for letter a\n",
+      "lower increased by 1 for letter r\n",
+      "lower increased by 1 for letter e\n",
+      "lower increased by 1 for letter y\n",
+      "lower increased by 1 for letter o\n",
+      "lower increased by 1 for letter u\n",
+      "lower increased by 1 for letter t\n",
+      "lower increased by 1 for letter h\n",
+      "lower increased by 1 for letter i\n",
+      "lower increased by 1 for letter s\n",
+      "lower increased by 1 for letter f\n",
+      "lower increased by 1 for letter i\n",
+      "lower increased by 1 for letter n\n",
+      "lower increased by 1 for letter e\n",
+      "Upper increased by 1 for letter T\n",
+      "lower increased by 1 for letter u\n",
+      "lower increased by 1 for letter e\n",
+      "lower increased by 1 for letter s\n",
+      "lower increased by 1 for letter d\n",
+      "lower increased by 1 for letter a\n",
+      "lower increased by 1 for letter y\n"
      ]
     }
    ],
@@ -195,19 +259,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def unique_list(lst):\n",
-    "    pass"
+    "    \n",
+    "   return list(set(lst))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +281,7 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,19 +303,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def multiply(numbers):  \n",
-    "    pass"
+    "    x = 1\n",
+    "\n",
+    "    for num in numbers:\n",
+    "      \n",
+    "      x *= num\n",
+    "    \n",
+    "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +330,7 @@
        "-24"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,34 +351,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def palindrome(s):\n",
-    "    pass"
+    "    reversed = s[::-1].replace(' ','')\n",
+    "    s_cleaned = s.replace(' ','')\n",
+    "\n",
+    "    if reversed == s_cleaned:\n",
+    "\n",
+    "        print (f\"{s} is a palindrome\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "racecar is a palindrome\n"
+     ]
     }
    ],
    "source": [
-    "palindrome('helleh')"
+    "palindrome('racecar')"
    ]
   },
   {
@@ -331,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 112,
    "metadata": {
     "collapsed": true
    },
@@ -340,21 +413,40 @@
     "import string\n",
     "\n",
     "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
-    "    pass"
+    "    \n",
+    "    #removing spaces from string and converting to lowercase\n",
+    "    str1_cleaned = str1.replace(' ','').lower()\n",
+    "    print(f\"cleaned string is now: {str1_cleaned}\")\n",
+    "\n",
+    "    #returning unique letters from string\n",
+    "    str1_cleaned = set(str1_cleaned)\n",
+    "\n",
+    "    #alphabet comparison\n",
+    "    letters = set(string.ascii_lowercase)\n",
+    "\n",
+    "    return str1_cleaned == letters\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cleaned string is now: thequickbrownfoxjumpsoverthelazydog\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
