--- a/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 126,
    "metadata": {
     "collapsed": true
    },
@@ -681,7 +681,7 @@
     "    \n",
     "    if (a + b + c) <= 21:\n",
     "        return (a + b + c)\n",
-    "    elif (a + b + c) > 21 and (a == 11 or b == 1 or c == 11):\n",
+    "    elif (a + b + c) > 21 and 11 in [a,b,c]:\n",
     "        return (a + b + c) - 10\n",
     "    else:\n",
     "        return 'BUST'"
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 127,
    "metadata": {
     "collapsed": true
    },
@@ -700,7 +700,7 @@
        "18"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 128,
    "metadata": {
     "collapsed": true
    },
@@ -723,7 +723,7 @@
        "'BUST'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 129,
    "metadata": {
     "collapsed": true
    },
@@ -746,7 +746,7 @@
        "19"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,37 +769,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 92,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def summer_69(arr):\n",
-    "    six_pos = arr.index(6)\n",
-    "    nine_pos = arr.index(9)\n",
+    "  # Variables\n",
+    "  cleaned_list_1 = []\n",
+    "  cleaned_list_2 = []\n",
+    "  six_pos = None\n",
+    "  nine_pos = None\n",
     "\n",
-    "    return sum(arr[0:six_pos])"
+    "  for num in arr:\n",
+    "      if num == 6:\n",
+    "            six_pos = arr.index(6)\n",
+    "\n",
+    "      if num == 9:\n",
+    "            nine_pos = arr.index(9)\n",
+    "\n",
+    "      \n",
+    "  if type(six_pos) == int:\n",
+    "      cleaned_list_1 = arr[:six_pos]\n",
+    "      cleaned_list_2 = arr[nine_pos + 1:]\n",
+    "      \n",
+    "      cleaned_list = cleaned_list_1 + cleaned_list_2\n",
+    "      return sum(cleaned_list)\n",
+    "  else:\n",
+    "      cleaned_list = arr\n",
+    "      return sum(cleaned_list)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 93,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "6 is not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [55]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Check\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m summer_69([\u001b[39m1\u001b[39;49m, \u001b[39m3\u001b[39;49m, \u001b[39m5\u001b[39;49m])\n",
-      "Input \u001b[1;32mIn [54]\u001b[0m, in \u001b[0;36msummer_69\u001b[1;34m(arr)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msummer_69\u001b[39m(arr):\n\u001b[1;32m----> 2\u001b[0m     six_pos \u001b[39m=\u001b[39m arr\u001b[39m.\u001b[39;49mindex(\u001b[39m6\u001b[39;49m)\n\u001b[0;32m      3\u001b[0m     nine_pos \u001b[39m=\u001b[39m arr\u001b[39m.\u001b[39mindex(\u001b[39m9\u001b[39m)\n\u001b[0;32m      5\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39msum\u001b[39m(arr[\u001b[39m0\u001b[39m:six_pos])\n",
-      "\u001b[1;31mValueError\u001b[0m: 6 is not in list"
-     ]
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -809,11 +830,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "summer_69([4, 5, 6, 7, 8, 9])"
@@ -821,11 +853,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "summer_69([2, 1, 6, 9, 11])"
@@ -851,23 +894,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def spy_game(nums):\n",
-    "    pass"
+    " \n",
+    "    for n in nums:\n",
+    "        if n == 0:\n",
+    "            zero_pos = nums.index(n)\n",
+    "\n",
+    "            if nums[zero_pos+1] == 0 and nums[zero_pos+2] == 7:\n",
+    "                return True\n",
+    "    \n",
+    "    \n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,2,4,0,0,7,5])"
@@ -875,11 +943,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,0,2,4,0,5,7])"
@@ -887,11 +966,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,7,2,0,4,5,0])"
@@ -909,24 +999,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def count_primes(num):\n",
-    "    pass\n",
+    "    \n",
+    "    #variables\n",
+    "    counter = 0\n",
+    "    num_list = list(range(2,num+1))\n",
+    "\n",
+    "    for n in num_list:\n",
+    "\n",
+    "        if n % 2 != 0 and n % 3 != 0 and n % 4 != 0 and n % 5 != 0 and n % 6 != 0:\n",
+    "            counter += 1\n",
+    "    \n",
+    "    return counter\n",
+    "            \n",
+    "\n",
+    "    \n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "count_primes(100)"
@@ -995,7 +1109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
